fix(CUPOPS-41): Fixes from 12/23 Demo - fixing visibility button issues - killing all garages - adding back button - making buttons more responsive on mobile (full width)

--- a/src/scss/helper.scss
+++ b/src/scss/helper.scss
@@ -405,6 +405,17 @@ $base-classes: 'top', 'left', 'bottom', 'right';
     $pseudo-classes,
     true
   );
+
+  @each $dimension-key, $dimension-value in $padding-margin-dimensions {
+    @include create-helper-with-pseudo-classes(
+      $base-class,
+      $dimension-key,
+      $dimension-value,
+      $base-class,
+      $pseudo-classes,
+      true
+    );
+  }
 }
 
 // WHITE SPACE
